src/css/docs.css
html, body {
  height: 100%;
  width: 100%;
  background-color: #E3E9ED;
  font-size: 11pt;
}

body {
  width: 900px;
  margin: 0 auto;
  text-align: left;
}

a {
  color: #4183C4;
}

a[role=button] {
  cursor: pointer;
}

*[hidden] {
  display: none;
}

.header {
  overflow: hidden;
  margin-top: 25px;
}

.header a {
  color: #444;
}

.header .logo {
  float: left;
}

.header .logo img {
  display: block;
  width: 150px;
  text-decoration: none;
  border: 0;
}

.header .menu {
  float: right;
  padding-top: 40px;
  text-align: right;
}

.header ul {
  list-style: none;
}

.header li {
  float: left;
  margin-right: 10px;
}

.footer {
  margin: 100px 0 50px 0;
  font-size: 90%;
  text-align: center;
}

.content {
  margin-top: 50px;
}

.content pre {
  background-color: #F5F5F5;
  border: solid 1px #D0D0D0;
  padding: 10px;
  font-size: 10pt;
}

.content ul, .content ol {
  margin-left: 30px;
}

.content ul li, .content ol li {
  margin-bottom: 10px;
}

.content h3 {
  margin-top: 50px;
}

.content h4 {
  margin-top: 25px;
}

.content code {
  background-color: #FEE9CC;
}

.content pre code {
  background-color: transparent;
}

.content .options .name {
  width: 150px;
  text-align: right;
  font-weight: bold;
}

.btn-primary {
  color: #ffffff;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  background-color: #006699;
  background-image: -moz-linear-gradient(top, #4892da, #006699);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4892da), to(#006699));
  background-image: -webkit-linear-gradient(top, #4892da, #006699);
  background-image: -o-linear-gradient(top, #4892da, #006699);
  background-image: linear-gradient(to bottom, #4892da, #006699);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4892da', endColorstr='#006699', GradientType=0);
  border-color: #006699 #006699 #4892da;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  *background-color: #006699;
}
.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.btn-primary.disabled,
.btn-primary[disabled] {
  color: #ffffff;
  background-color: #006699;
  *background-color: #006699;
}
.btn-primary:active,
.btn-primary.active {
  background-color: #006699;
}

